--- a/index.html
+++ b/index.html
@@ -64,6 +64,21 @@
                      <h3>Mosque Locator</h3>
                     <p>Find the nearest mosque to your location with our mosque locator tool.</p>
                 </div>
+                <div class="card">
+                    <i class="fa-solid fa-book-quran"></i>
+                    <h3>Online Quran Classes</h3>
+                    <p>Join our online Quran classes and learn from experienced teachers.</p>
+                </div>
+                <div class="card">
+                    <i class="fa-solid fa-hand-holding-heart"></i>
+                    <h3>Charity Donations</h3>
+                    <p>Support our mission by donating to our charity projects.</p>
+                </div>
+                <div class="card">
+                    <i class="fa-solid fa-mosque"></i>               
+                     <h3>Mosque Locator</h3>
+                    <p>Find the nearest mosque to your location with our mosque locator tool.</p>
+                </div>
             </div>
           </section>
     </div>
